Bug 362228 - master crash on startup on neon
Summary: master crash on startup on neon
Status: RESOLVED FIXED
Alias: None
Product: kde
Classification: I don't know
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-04-25 10:56 UTC by Harald Sitter
Modified: 2016-05-04 10:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-04-25 10:56:29 UTC
Application: plasma-discover (5.6.90)
 (Compiled from sources)
Qt Version: 5.5.1
Frameworks Version: 5.21.0
Operating System: Linux 4.4.0-21-generic x86_64
Distribution: KDE neon User Edition on 16.04

-- Information about the crash:
- What I was doing when the application crashed:

started discover

explodes immediately.

kf5.21 (I think :P)

The crash can be reproduced every time.

-- Backtrace:
Application: Discover (plasma-discover), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f45c98028c0 (LWP 31304))]

Thread 4 (Thread 0x7f45b9128700 (LWP 31305)):
#0  0x00007f45c609de8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f45c155ac62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f45c155c8d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f45bbaac789 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f45c6a9c7fe in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f45c4e6b6fa in start_thread (arg=0x7f45b9128700) at pthread_create.c:333
#6  0x00007f45c60a9b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f45afee7700 (LWP 31306)):
#0  0x00007f45c609de8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f45c2f5131c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f45c2f5142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f45c6cd3a7b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f45c6c7ad8a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f45c6a97854 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f45c8c0a6a5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f45c6a9c7fe in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f45c4e6b6fa in start_thread (arg=0x7f45afee7700) at pthread_create.c:333
#9  0x00007f45c60a9b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f45a7889700 (LWP 31307)):
#0  0x00007f45c609de8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f45c2f5131c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f45c2f5142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f45c6cd3a7b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f45c6c7ad8a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f45c6a97854 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f45c6a9c7fe in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f45c4e6b6fa in start_thread (arg=0x7f45a7889700) at pthread_create.c:333
#8  0x00007f45c60a9b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f45c98028c0 (LWP 31304)):
[KCrash Handler]
#6  0x00007f45c5fd8418 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
#7  0x00007f45c5fda01a in __GI_abort () at abort.c:89
#8  0x00007f45c6a89fb1 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f45c6a85181 in qt_assert_x(char const*, char const*, char const*, int) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f459e922cb1 in QList<QString>::at (this=0x7fff724fcd40, i=0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:510
#11 0x00007f459e92b6a1 in AppPackageKitResource::AppPackageKitResource (this=0x25e7830, data=..., parent=0x1e322a0) at /home/me/src/git/discover/libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp:29
#12 0x00007f459e919455 in PackageKitBackend::reloadPackageList (this=0x1e322a0) at /home/me/src/git/discover/libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp:122
#13 0x00007f459e918c6d in PackageKitBackend::PackageKitBackend (this=0x1e322a0, parent=0x184e980) at /home/me/src/git/discover/libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp:66
#14 0x00007f459e91cf4b in PackageKitBackendFactory::newInstance (this=0x1e26470, parent=0x184e980) at /home/me/src/git/discover/libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp:46
#15 0x00007f45c8db23ad in DiscoverBackendsFactory::backendForFile (this=0x7fff724fd26f, path=..., name=...) at /home/me/src/git/discover/libdiscover/DiscoverBackendsFactory.cpp:64
#16 0x00007f45c8db2047 in DiscoverBackendsFactory::backend (this=0x7fff724fd26f, name=...) at /home/me/src/git/discover/libdiscover/DiscoverBackendsFactory.cpp:46
#17 0x00007f45c8db2a64 in DiscoverBackendsFactory::allBackends (this=0x7fff724fd26f) at /home/me/src/git/discover/libdiscover/DiscoverBackendsFactory.cpp:102
#18 0x00007f45c8d9ca04 in ResourcesModel::registerAllBackends (this=0x184e980) at /home/me/src/git/discover/libdiscover/resources/ResourcesModel.cpp:386
#19 0x00007f45c8dbd804 in ResourcesModel::qt_static_metacall (_o=0x184e980, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x1850560) at /home/me/src/git/discover/obj-x86_64-linux-gnu/libdiscover/moc_ResourcesModel.cpp:167
#20 0x00007f45c6cace81 in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007f45c756fffc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f45c75754b6 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007f45c6c7d5cb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007f45c6c7f9c6 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x00007f45c6cd3653 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007f45c2f51127 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f45c2f51380 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f45c2f5142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f45c6cd3a5f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#30 0x00007f45c6c7ad8a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#31 0x00007f45c6c82e2c in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#32 0x000000000040b793 in main (argc=1, argv=0x7fff724fdaf8) at /home/me/src/git/discover/discover/main.cpp:120

Possible duplicates by query: bug 355096, bug 353914, bug 353748, bug 353525, bug 353399.

Reported using DrKonqi
Comment 1 Aleix Pol 2016-04-26 11:53:23 UTC
This is crashing because there's an appstream component that doesn't match into any file. How's that even possible?
Comment 2 Harald Sitter 2016-04-26 13:02:55 UTC
muondiscover(13789)/(default) PackageKitBackend::reloadPackageList: "UEFI-dummy-dev0" "UEFI Updates" () ""

the empty () is the package names list of the component


$ appstreamcli --verbose dump UEFI-dummy-dev0
** (appstreamcli:14274): DEBUG: AppSteam cache location altered to: /var/cache/app-info
<?xml version="1.0" encoding="utf-8"?>
<component type="firmware">
  <id>UEFI-dummy-dev0</id>
  <name>UEFI Updates</name>
  <summary>Enable UEFI Update Functionality</summary>
  <releases>
    <release version="1" date="2016-02-29T11:04:03Z"><description>&lt;p&gt;
            Applying this update will enable the UEFI firmware reporting interface on your hardware.
          &lt;/p&gt;
&lt;p&gt;
            You will have to restart your computer after this update is installed
            to be notified of any pending firmware updates.
          &lt;/p&gt;</description></release>
  </releases>
</component>



probably some fake thing for ubuntu's driver thingy?
Comment 3 Harald Sitter 2016-04-26 13:04:25 UTC
maybe relevant (haven't read it) https://bugs.launchpad.net/ubuntu/+source/gnome-software/+bug/1554023
Comment 4 Aleix Pol 2016-04-26 13:20:56 UTC
Git commit 691a886177791f0fcf98ad6cc0e5241dddbcf7d6 by Aleix Pol.
Committed on 26/04/2016 at 13:20.
Pushed by apol into branch 'Plasma/5.6'.

Don't try to create a component that isn't in a package

Probably because of fwupd?

M  +6    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

http://commits.kde.org/discover/691a886177791f0fcf98ad6cc0e5241dddbcf7d6
Comment 5 Marco Martin 2016-05-04 10:59:55 UTC
*** Bug 362475 has been marked as a duplicate of this bug. ***