Don't try to create a component that isn't in a package

Probably because of fwupd?

BUG: 362228